# unload

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  crontab  entrypoint.sh  fly.dev.toml  fly.prod.toml  fly.toml  justfile
.sqlx/: query-0170cd551ab6e817d5494a3e04e311db1ff1b95f54f7d886f936dce2899a31d8.json  query-03ec8820790eea9e351ab63fe7a6ed8afeb4d17745bf437aa8aa5bf762578949.json  query-06e485586dbda991f6ae935acae6660aeca7ed74786efaee0910707b0c214a4d.json  query-06eb71bffb489a689a110e96cd4d25f2f823cd27937841e7b52ca45e43d223e7.json  query-0794c41ad66da2afe79852374c19f56d1605827c2e854d8c42ecde05078dfc26.json  query-08002c083544652ec5f7ae98983607fa793ae264f92e1a5a06b57c11b2232e6d.json  query-083e9d6f44025ec2850f0abc8625f21e8c7edfb667a4f3dee53263cd073c97f7.json  query-098e3c1755869b572dc87d14f509c726ac1d113e9575baa3abd17bcc77d2b314.json  query-0b155d4ebec340ae1a5e5b259bc1b1576f67eb789a2d908c7ed5d7a3d560ed89.json  query-0b456f1cd723aadedc9f6d5f4a9c0637c61389d24003f88006f5490c726494ff.json  query-0c9670531f4c8d3105c31637c75b3b8043d7ea2a62b42e2cca277950527ba8c4.json  query-17b068b4c482885b975db4c7d0db8f8c15f00f87e234a6de2955a2a66a78be70.json  (+65 more)
backend/: .dockerignore  Cargo.toml  Dockerfile  empty.db  fly.toml
backend/.sqlx/: query-00893d22552748b0049ffa680d1c3790fb1d48e76e71d56935df2a806b8f5196.json  query-0e156fa520f0f62cbbd85cbe6e93d0619e251ef85cd45a817b99c8a917f07fbd.json  query-28746b5dcf2b1a345a20337d0873d0ce0f8484931aaeda45f0766cddf5b20530.json  query-2a844193a2bf20a226a53a2bf912b51268261be23201c3fa7236728f195b0478.json  query-332ddf44f4706e1e5042a6ddd45d7e48f7b55e0908aab7a9c6528210705a3d82.json  query-3fa266baf9b7758dacd255c331bdfeb0c4396db124f376df991f90c925c00fc7.json  query-44ea78efd99c19351596b7c1e20c079f2923f1799f863c467b92bc70b3cee558.json  query-5a713879b2ef999bf3bc4d333a114b10670addae50c93bf704755c5c996b37d6.json  query-5b4e415909a6d4391d6a3b2eb449a0f45526d1e33d20819dfd26c2020094fe8d.json  query-5bdca00fcad6d429eb129933731e3c8c576e41951db8946fb03c796b88f61fc6.json  query-6c8f0d4a066e22c2e24d8eece3362af95efa994730c278c8d3003852e6f1fba8.json  query-7df1dbb0cebf7e58c38a43c8a76f201766ba8448840a4ddc99e6ca5d85c27ed5.json  query-93b89b8b9dcb8e6c838920c0f84022da453d251a625f9da982275fb83437f91b.json  query-9ddba7f0de24d905f157c25a8a9355be934a163de2ffe5eeb38cde61e624190a.json  query-a1c8ed3333b1cf2c94882a148c837ed88afc0558809341048b55335a50397aae.json  query-a56c0744fbfdc5df39889cfd857c494044e31e379e6f9768ab27a093774b5f90.json  query-c001ede7b264222d2317b74c42836b9471d8ab778e23349caae19ec299aae1d3.json  query-c51ae5e9bd67f517f2241ae6014336d86c2102f3849686ec365fbec2de1e2e3a.json  query-d36440c2fbccfabf30e939e0a828a201351b46209e9aa44ee346b3cc6262f00d.json  query-e47dfbbc81dc118dbb529bc2ad725cb50bbea8c1aa23cff4e7f11d2ece8856a5.json  query-e7a6cf4e2cb2a65868aafd0149c509441d47a33e5f4da2aefffe3e3636869cf4.json  query-ec7f37e66bb2b8193f64b126d740afe988aec81c42f7bef19f528ed390f48a4b.json  query-f75bc9b62ec70ec791d464123168b33b7383b2a3629b558e0604450b2df8c1c3.json
backend/benches/: create_task.rs  show_tasks.rs
backend/data/: adjectives.txt  initial.db
backend/migrations/: 20231117210851_unload.sql  20240303201948_remove_task_dependencies.sql  20240618220348_remove_size.sql  20240801145837_chat_gpt_limits.sql  20240827172016_insert_chat_gpt_limits.sql
backend/src/: lib.rs  main.rs
data/: initial.db
frontend/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json  tailwind.config.js
frontend/src/: add_task.rs  add_user.rs  app.rs  board.rs  color_picker.rs  commands.rs  components.rs  datetime.rs  description_parser.rs  edit_task.rs  filter_bar.rs  join_board.rs  lib.rs  model.rs  pages.rs  repeating_tasks.rs  requests.rs  responsive_layout.rs  route.rs  styles.rs  tag_archive.rs  tag_search.rs  tags.rs  task_archive.rs  themes.rs  translations.rs  user_search.rs  users.rs  window.rs
frontend/src/components/: archive.rs  board.rs  color_picker.rs  due.rs  filters.rs  form.rs  icons.rs  input.rs  nav.rs  one_column_board.rs  tag_archive.rs  tag_icon.rs  task.rs  task_archive.rs  three_column_board.rs  tooltip.rs  user_icon.rs
frontend/src/components/task/: due.rs  title.rs
frontend/src/i18n/: en.json  sk.json
frontend/src/pages/: archive.rs  board.rs  join_board.rs  tags.rs  users.rs
frontend/src/pages/archive/: components.rs  model.rs  requests.rs
frontend/src/pages/archive/components/: tag_archive.rs  tag_list.rs  task_archive.rs  task_list.rs
frontend/src/pages/board/: components.rs  model.rs  one_column_board.rs  requests.rs  three_column_board.rs
frontend/src/pages/board/components/: add_task_button.rs  assignee_selection.rs  assignees.rs  assignment_list.rs  chat_gpt.rs  description_input.rs  new_task_form.rs  selector_toggle.rs  tag_icon.rs  tag_selection.rs  task.rs  task_tags.rs  theme_button.rs  user_icon.rs
frontend/src/pages/board/components/task/: description.rs  due.rs  title.rs
frontend/src/pages/tags/: components.rs  requests.rs
frontend/src/pages/tags/components/: tag_list.rs
frontend/src/pages/users/: components.rs  model.rs  requests.rs
frontend/src/pages/users/components/: user_list.rs
frontend/src/translations/: am.rs  ar.rs  az.rs  bg.rs  bh.rs  bho.rs  bn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  es.rs  et.rs  fa.rs  fi.rs  fr.rs  gu.rs  ha.rs  hi.rs  hr.rs  hu.rs  hy.rs  id.rs  ig.rs  it.rs  ja.rs  jv.rs  ka.rs  kk.rs  kn.rs  ko.rs  lt.rs  lv.rs  mr.rs  ms.rs  nl.rs  no.rs  pa.rs  pl.rs  (+20 more)
tools/: Cargo.toml
unload-mobile/: Cargo.toml  mobile.toml
unload-mobile/src/: lib.rs
website/: Cargo.toml  Dioxus.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
website/src/: buttons.rs  cards.rs  lib.rs  main.rs  mega_menu.rs  nav_bar.rs  toggles.rs  translations.rs
website/src/translations/: am.rs  ar.rs  az.rs  bg.rs  bho.rs  bn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  es.rs  et.rs  fa.rs  fi.rs  fr.rs  gu.rs  ha.rs  hi.rs  hr.rs  hu.rs  hy.rs  id.rs  ig.rs  it.rs  ja.rs  jv.rs  ka.rs  kk.rs  kn.rs  ko.rs  lt.rs  lv.rs  mr.rs  ms.rs  nl.rs  no.rs  pa.rs  pl.rs  pt.rs  (+19 more)
(+21 files in other folders)
