[package]
name = "unload"
version = "0.1.0"
edition = "2021"
default-run = "unload"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
clap = { version = "4.4.8", features = ["derive"] }
indicatif = "0.17.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
axum-test = "13.4.1"
criterion = { version = "0.5.1", features = ["async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bench]]
name = "show_tasks"
harness = false
