[package]
name = "unload"
version = "0.1.0"
edition = "2021"
default-run = "unload"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_models = { path = "../shared_models", features = ["sqlx"] }
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
indicatif = "0.17.7"
inquire = { version = "0.6.2", features = ["date"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.2"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
opentelemetry_sdk = "0.22.1"
opentelemetry-otlp = "0.15.0"
confique = "0.2.5"
serde = "1.0.197"

[dev-dependencies]
axum-test = "14.0.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "show_tasks"
harness = false
