[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
dioxus = "0.4.3"
dioxus-web = "0.4.3"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
shared_models = { path = "../shared_models" }
tokio = { version = "1.34.0", features = ["macros"] }
wasm-logger = "0.2.0"
