[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
itertools = "0.12.0"
dioxus = { version = "0.5", features = ["web", "router"] }
reqwest = { version = "0.11.22", features = ["json"] }
shared_models = { path = "../shared_models" }
tokio = { version = "1.34.0", features = ["macros"] }
web-sys = { version = "0.3.66", features = ["Window"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
