[package]
name = "frontend"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
itertools = "0.12.0"
dioxus = { version = "0.5", features = ["web", "router"] }
reqwest = { version = "0.11.22", features = ["json"] }
shared_models = { path = "../shared_models" }
tokio = { version = "1.34.0", features = ["macros"] }
web-sys = { version = "0.3.66", features = ["Window"] }
serde_json = "1.0"
log = "0.4.19"
dioxus-logger = "0.4.1"
dioxus-sdk = { version = "0.5", features = ["storage"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
manganis = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.5", features = ["mobile"] }
