[package]
name = "tools"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
frontend = { path = "../frontend" }
shared_models = { path = "../shared_models" }
openai-api-rs = "5.0.4"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
