[package]
name = "tools"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
frontend = { path = "../frontend" }
website = { path = "../website" }
shared_models = { path = "../shared_models" }
openai-api-rs = "5.0.10"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
tempfile = "3.13.0"
serde = "1.0.210"
serde_json = "1.0.128"
