[package]
name = "website"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

dioxus = { version = "0.5", features = ["web", "ssr"] }

# Debug
dioxus-logger = "0.5.1"

[features]
web = []
