[package]
name = "website"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

dioxus = { version = "0.5", features = ["web", "ssr"] }
dioxus-web = { version = "0.5", features = ["hydrate"] }
dioxus-ssr = { version = "0.5" }
dioxus-sdk = { version = "0.5", features = ["i18n"] }
unic-langid-impl = "0.9.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.70", features = ["Navigator", "Window"] }
dioxus-logger = "0.5.1"
dioxus-html-macro = "0.3.0"

[features]
prebuild = []
